Added pseudoterminal (first version)/screen template/and modified main example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,9 +14,9 @@ endif()
 file(GLOB MAIN_SOURCES "${CMAKE_SOURCE_DIR}/*.cpp")
 file(GLOB WINDOWHANDLER_SOURCES "${CMAKE_SOURCE_DIR}/windowHandler/*.cpp")
 file(GLOB SCREENS_SOURCES "${CMAKE_SOURCE_DIR}/screens/*.cpp")
+file(GLOB GLOBAL_VARS_SOURCES "${CMAKE_SOURCE_DIR}/*.h")
 
-
-add_executable(main ${MAIN_SOURCES} ${WINDOWHANDLER_SOURCES} ${SCREENS_SOURCES})
+add_executable(main ${MAIN_SOURCES} ${WINDOWHANDLER_SOURCES} ${SCREENS_SOURCES} ${GLOBAL_VARS_SOURCES})
 set_target_properties(main PROPERTIES
     RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}"
 )
